# Crypto_ARB_Monitor

./: CMakeLists.txt  README.md
config/: fixture_crypto_quotes.csv
docs/: cli_contract.md  contracts.md  cpp23_rationale.md
include/common/: StringUtils.h
include/config/: ConfigManager.h
include/crypto/: CryptoArbitrageEngine.h
include/exceptions/: Exceptions.h
include/online/: MarketDataConnectors.h
src/: ConfigManager.cpp  CryptoArbitrageEngine.cpp  MarketDataConnectors.cpp  main.cpp
tests/: run_cli_config_and_args.cmake  run_cli_e2e.cmake  test_config_manager.cpp  test_crypto_arbitrage.cpp  test_online_connectors.cpp  test_tradingview_quotes.cpp
